# wisp-iwa

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  term.html  tsconfig.json  vite.config.ts
.github/workflows/: gh-pages.yml
public/: hterm.html  hterm.js  hterm_controller.js  icon.xcf
public/.well-known/: manifest.webmanifest
rust/: Cargo.toml  build.sh
rust/src/: lib.rs  twisp.rs  ws_wrapper.rs
src/: direct-sockets.d.ts  iframesafelist.tsx  index.css  main.tsx  store.ts  term.tsx  termcontroller.ts  wasm.ts
src/routes/: home.tsx  ports.tsx  settings.tsx  status.tsx  twisp.tsx
