[package]
name = "wisp-iwa-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
bytes = "1.7.2"
ed25519-dalek = { version = "2.1.1", features = ["pem", "signature"] }
event-listener = "5.3.1"
flume = "0.11.0"
futures-util = "0.3.30"
js-sys = "0.3.70"
send_wrapper = "0.6.0"
sha2 = "0.10.8"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
wasm-streams = "0.4.0"
web-sys = { version = "0.3.70", features = ["BinaryType", "MessageEvent", "WebSocket"] }
wisp-mux = { git = "https://github.com/mercuryworkshop/epoxy-tls", features = ["wasm", "certificate"] }
